# charter

./: .gitmodules  CMakeLists.txt  CODEOWNERS  DEPENDENCIES.md  LICENSE  README.md  install-dependencies.sh  run-clang-format.sh
doc/: abci_quick_reference.md  chat_history.md  error_codes_and_events_contract.md  funding_checklist.md  funding_deck.md  golden_workflow_contract.md  licensing_strategy_us.md  linkedin_post_options.md  lite_paper.md  lite_paper_public.md  low_hanging_fruit_status.md  matrix_coverage_status.md  milestone_2week_crypto_hardening.md  one_pager.md  operation_happy_failure_paths.md  policy_rules_and_failure_matrix.md  pre_pilot_gap_checklist.md  production_architecture.md  query_and_keyspace_contract.md  schema-definition.md  schema_type_custody_workflows.md  schema_types_and_workflows.md  sponsor_packet.md  transaction_workflow_matrix.md  workflow_playbooks.md
doc/issues/: 01_actor_authorization_model.md  02_destination_governance_workflow.md  03_cumulative_velocity_limits.md  04_durable_security_audit_events.md  05_jurisdiction_profile_bundles.md  06_regulator_evidence_bundle_v1.md  07_observability_and_explorer_stack.md
include/charter/abci/: server.hpp
include/charter/abci/health/: health.proto
include/charter/blake3/: hash.hpp
include/charter/common/: critical.hpp
include/charter/crypto/: verify.hpp
include/charter/encoding/scale/: approval_rule.hpp  approve_intent.hpp  attestation_record.hpp  cancel_intent.hpp  claim_requirement.hpp  claim_type.hpp  create_policy_set.hpp  destination_rule.hpp  intent_action.hpp  intent_status.hpp  policy_set.hpp  primitives.hpp  propose_intent.hpp  revoke_attestation.hpp  time_lock_rule.hpp  transaction.hpp  vault_model.hpp
include/charter/execution/: engine.hpp  signature_verifier.hpp
include/charter/schema/: activate_policy_set.hpp  active_policy_pointer.hpp  app_info.hpp  apply_destination_update.hpp  apply_snapshot_chunk_result.hpp  approval_rule.hpp  approval_state.hpp  approve_destination_update.hpp  approve_intent.hpp  asset_kind.hpp  asset_ref.hpp  asset_state.hpp  attestation_record.hpp  attestation_status.hpp  block_result.hpp  cancel_intent.hpp  chain.hpp  claim_requirement.hpp  claim_type.hpp  commit_result.hpp  create_policy_set.hpp  create_vault.hpp  create_workspace.hpp  degraded_mode.hpp  destination_rule.hpp  destination_type.hpp  destination_update_state.hpp  destination_update_status.hpp  disable_asset.hpp  enum_string.hpp  execute_intent.hpp  history_entry.hpp  intent_action.hpp  intent_state.hpp  intent_status.hpp  jurisdiction.hpp  limit_rule.hpp  offer_snapshot_result.hpp  operation_type.hpp  policy_rule.hpp  (+30 more)
include/charter/schema/encoding/: encoder.hpp
include/charter/schema/encoding/scale/: activate_policy_set.hpp  active_policy_pointer.hpp  app_info.hpp  apply_destination_update.hpp  apply_snapshot_chunk_result.hpp  approval_rule.hpp  approval_state.hpp  approve_destination_update.hpp  approve_intent.hpp  asset_kind.hpp  asset_ref.hpp  asset_state.hpp  attestation_record.hpp  attestation_status.hpp  block_result.hpp  cancel_intent.hpp  chain.hpp  claim_requirement.hpp  claim_type.hpp  commit_result.hpp  create_policy_set.hpp  create_vault.hpp  create_workspace.hpp  degraded_mode.hpp  destination_rule.hpp  destination_state.hpp  destination_type.hpp  destination_update_state.hpp  destination_update_status.hpp  disable_asset.hpp  encoder.hpp  execute_intent.hpp  history_entry.hpp  intent_action.hpp  limit_rule.hpp  (+38 more)
include/charter/schema/key/: active_policy_pointer.hpp  approval_state.hpp  asset_state.hpp  attestation_record.hpp  builder.hpp  destination_state.hpp  engine_keys.hpp  intent_state.hpp  key.hpp  nonce_record.hpp  policy_set_state.hpp  vault_state.hpp  workspace_state.hpp
include/charter/storage/: storage.hpp
include/charter/storage/rocksdb/: storage.hpp
scripts/: chatlog.sh
src/: main.cpp
src/abci/: server.cpp
src/blake3/: hash.cpp
src/crypto/: verify.cpp
src/execution/: engine.cpp
src/schema/: primitives.cpp
src/schema/encoding/scale/: activate_policy_set.cpp  active_policy_pointer.cpp  app_info.cpp  apply_destination_update.cpp  approval_rule.cpp  approval_state.cpp  approve_destination_update.cpp  approve_intent.cpp  asset_ref.cpp  asset_state.cpp  attestation_record.cpp  block_result.cpp  cancel_intent.cpp  claim_requirement.cpp  commit_result.cpp  create_policy_set.cpp  create_vault.cpp  create_workspace.cpp  destination_rule.cpp  destination_update_state.cpp  disable_asset.cpp  execute_intent.cpp  history_entry.cpp  intent_state.cpp  jurisdiction.cpp  limit_rule.cpp  policy_rule.cpp  policy_set.cpp  primitives.cpp  propose_destination_update.cpp  propose_intent.cpp  query_result.cpp  replay_result.cpp  revoke_attestation.cpp  security_event_record.cpp  set_degraded_mode.cpp  snapshot_descriptor.cpp  time_lock_rule.cpp  transaction.cpp  transaction_event.cpp  (+9 more)
src/schema/key/: active_policy_pointer.cpp  approval_state.cpp  attestation_record.cpp  builder.cpp  destination_state.cpp  intent_state.cpp  nonce_record.cpp  policy_set_state.cpp  vault_state.cpp  workspace_state.cpp
src/schema/key/rocksdb/: active_policy_pointer.cpp  approval_state.cpp  attestation_record.cpp  attestation_status.cpp  destination_state.cpp  intent_state.cpp  nonce_record.cpp  policy_set_state.cpp  primitives.cpp  vault_state.cpp  workspace_state.cpp
src/schema/keys/: engine_keys.cpp
src/storage/rocksdb/: storage.cpp
src/tools/: transaction_builder.cpp  tx_builder.cpp
tests/: cometbft_workflows.md  run_proof_first_demo.sh
tests/fixtures/: schema_payload_transaction_vectors_v1.txt  schema_payload_tx_vectors_v1.txt
tests/include/charter/testing/: abci_harness.hpp  common.hpp  execution_fixture.hpp  execution_harness.hpp
tests/src/abci/: server_types_test.cpp
tests/src/crypto/: verify_test.cpp
tests/src/execution/: engine_integration_test.cpp  engine_types_test.cpp
tests/src/schema/: encoding_types_test.cpp  primitives_test.cpp  transaction_types_test.cpp
tests/src/storage/: storage_types_test.cpp
tests/src/tools/: transaction_builder_test.cpp
(+40 files in other folders)
